--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.33.6",
+    "@clerk/nextjs": "^6.36.5",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -29,12 +29,12 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
-    "next": "^15.3.2",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "sonner": "^2.0.7",
